<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/personalData"
        android:textColor="@color/realBlack"
        android:textSize="24sp"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="15dp"
        android:src="@drawable/image_poster"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/manIndicator"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="25dp"
        android:src="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/imageProfile" />

    <ImageView
        android:id="@+id/womanIndicator"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="25dp"
        android:src="@color/realBlack"
        app:layout_constraintLeft_toRightOf="@id/imageProfile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile" />

    <TextView
        android:id="@+id/genderIndicatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/manIndicator"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/manIndicator" />

    <TextView
        android:id="@+id/womanIndicatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/woman"
        android:textColor="@color/realBlack"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/womanIndicator"
        app:layout_constraintLeft_toRightOf="@id/womanIndicator"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/womanIndicator" />

    <TextView
        android:id="@+id/manIndicatorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/man"
        android:textColor="@color/realBlack"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/manIndicator"
        app:layout_constraintLeft_toRightOf="@id/manIndicator"
        app:layout_constraintTop_toTopOf="@id/manIndicator" />

    <TextView
        android:id="@+id/secondNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/secondName"
        android:textColor="@color/realBlack"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/womanIndicator" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="?android:actionBarSize"
        android:id="@+id/seconNameCV"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/secondNameText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secondNameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/auth_items_bg"
            android:gravity="center|left"
            android:textColor="@color/realBlack"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textColor="@color/realBlack"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/seconNameCV" />


    <androidx.cardview.widget.CardView
        android:id="@+id/nameCV"
        style="@style/ScreenPersonalCardviewStyle"
        app:cardCornerRadius="15dp"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="?android:actionBarSize"
        app:cardElevation="15dp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/nameText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/auth_items_bg"
            android:gravity="center|left"
            android:textColor="@color/realBlack"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/phoneNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/phoneNumber"
        android:textColor="@color/realBlack"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/nameCV" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="?android:actionBarSize"
        android:id="@+id/phoneNumberCV"
        style="@style/ScreenPersonalCardviewStyle"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/auth_items_bg"
            android:gravity="center|left"
            android:textColor="@color/realBlack"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/realBlack"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberCV" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emailCV"
        style="@style/ScreenPersonalCardviewStyle"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintLeft_toLeftOf="@id/manIndicator"
        app:layout_constraintRight_toRightOf="@id/womanIndicator"
        app:layout_constraintTop_toBottomOf="@id/emailText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/auth_items_bg"
            android:gravity="center|left"
            android:textColor="@color/realBlack"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>